# Auto_BI

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  fable_audit.md  fable_audit_dashboard_adequacy.md  fable_audit_phase3.md  phase-1-completion.md  phase1-audit-fixes.md  phase2-backend-api.md  phase2-enrichment-ui.md  plan.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/badges/: coverage.json
.github/workflows/: ci.yml  codeql.yml  demo-image.yml  gitleaks.yml  release.yml
auto_bi/: __init__.py  auth.py  cli.py  config.py  dmcr.py  engine.py  logging_setup.py  strict.py
auto_bi/adapters/: artifacts.py  base.py  factory.py
auto_bi/adapters/datalens/: adapter.py  chart_config.py  client.py  dataset.py
auto_bi/adapters/superset/: adapter.py  client.py  form_data.py  native_filters.py
auto_bi/advisor/: __init__.py  clickhouse.py  core.py  effective.py  explain.py  findings.py  greenplum.py  narrate.py
auto_bi/agent/: autospec.py  dataset_plan.py  grounding.py  insights.py  machine.py  normalize.py  pipeline.py  propose.py  query_plan.py  seed.py  sql_guard.py  sqlgen.py
auto_bi/api/: __init__.py  app.py  metrics.py  ratelimit.py  schemas.py  sessions.py
auto_bi/api/static/: app.css  app.js  index.html
auto_bi/eval/: cases.py  runner.py
auto_bi/introspect/: base.py  clickhouse.py  gaps.py  greenplum.py
auto_bi/ir/: spec.py  validate.py
auto_bi/llm/: _structured.py  anthropic.py  base.py  budget.py  factory.py  fixture.py  gracekelly.py  policy.py
auto_bi/semantic/: dbt_import.py  model.py  render.py  select.py
auto_bi/store/: __init__.py  db.py
deploy/hf-demo/: Dockerfile  README.md  nginx.conf  publish_space.py  start-autobi.sh  start-superset.sh  superset_config.py  superset_public_role.py  supervisord.conf
docker/clickhouse/initdb/: 01_schema.sql  02_dimensions.sql  03_fact.sh  04_ro_user.sh
docker/superset/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MARKET.md  ONBOARDING_DWH.md  PLAN.md  USER_GUIDE.md  gaps_report_marts_x5.md
docs/history/: claude-status-log.md  fable_audit_b3_label_joins.md  fable_audit_phase1.md  fable_audit_phase2.md  fable_audit_phase4.md  fable_audit_phase4_auth.md  fable_audit_phase4_observability.md  phase-1-completion.md  phase2-dbt-import.md  phase2-fields-first.md
docs/plans/: 2026-06-12-1.10-real-dwh-x5-runbook.md  2026-06-13-datalens-selfhosted-runbook.md  2026-06-13-phase3-greenplum-runbook.md  2026-06-13-phase3-prep.md  2026-06-13-phase3.1-datalens-spike.md  2026-06-13-phase3.2-datalens-adapter-reversal.md  2026-06-13-phase3.5-gp-golden-cases-handoff.md  2026-06-14-dashboard-adequacy-fixes.md  2026-06-14-luxms-adapter-plan.md  2026-06-14-phase4-observability.md  2026-06-14-phase4-remainder.md  2026-06-14-visiology-spike.md  2026-06-24-auto-overview-mode.md  2026-06-25-advisor-remediation.md  2026-06-25-derived-metrics-pop.md  2026-06-26-horizontal-bars.md  2026-06-29-anthropic-token-usage.md  2026-06-29-core-deepening-a2-a5.md  2026-06-29-roadmap-maximal.md  2026-07-04-s14-yoy-kpi-scalar.md  2026-07-17-p1-2-advisor-effective-filters.md  2026-07-17-p1-6-semantic-governance.md  2026-07-18-live-cleanup-wiring.md
scripts/: check_repo_hygiene.py  demo_golden_path.py  dev_ui_server.py  gp_scale_validate.py  release_preflight.py  stand_create_gp_dm.sql  stand_create_marts.sql  stand_load_bv_mat.sh  stand_scale_gp_dm.sql  verify_live_clickhouse.py
semantic/: model.yaml  model_gp.yaml  model_stand.yaml  model_x5.yaml
tests/: conftest.py  test_adapter_factory.py  test_advisor.py  test_advisor_effective_filters.py  test_advisor_greenplum.py  test_anthropic.py  test_api.py  test_api_auth.py  test_api_dcr_rbac.py  test_api_demo.py  test_api_ready.py  test_api_resume.py  test_api_sse_cap.py  test_artifact_namespace.py  test_auth.py  test_autospec.py  test_cli_build_auto.py  test_cli_introspect.py  test_cli_offline.py  test_cli_prune.py  test_config_env_typos.py  test_connection_fingerprint.py  test_context_select.py  test_d1_acceptance.py  test_datalens_chart.py  test_datalens_contract.py  test_datalens_dataset.py  test_datalens_password_default.py  test_dataset_plan.py  test_dbt_import.py  test_demo_golden_path.py  test_dmcr.py  test_engine.py  test_eval.py  test_gaps.py  test_gracekelly.py  test_insights.py  test_introspect.py  test_introspect_greenplum.py  test_ir_validate.py  (+38 more)
tests/fixtures/golden_llm/: a1_quantity.json  a2_name.json  a4_quantity_dynamics.json  f1_fields_revenue_trend.json  f2_fields_two_groups.json  f3_fields_then_edit.json  g10_avg_price_by_category.json  g11_items_by_day.json  g12_revenue_by_city_join.json  g13_avg_ticket_ratio.json  g14_ratio_by_store.json  g15_monthly_trend.json  g16_weekly_trend.json  g17_yoy_monthly.json  g18_mom_pct.json  g19_lag3_pct.json  g1_revenue_by_day.json  g20_running_total.json  g21_share_of_total.json  g22_pareto_stores.json  g23_price_histogram.json  g2_total_revenue_kpi.json  g3_top_stores.json  g4_orders_by_day.json  g5_pivot_store_manager.json  g6_heatmap_day_store.json  g7_table_recent.json  g8_stacked_by_store.json  g9_city_share.json  gp_g10_monthly_trend.json  gp_g11_yoy_monthly.json  gp_g12_pareto_stores.json  gp_g1_revenue_by_day.json  gp_g2_total_revenue_kpi.json  gp_g3_top_stores.json  gp_g4_revenue_by_city.json  gp_g5_orders_by_day.json  gp_g6_revenue_by_category.json  gp_g7_qty_by_day.json  gp_g8_store_format_share.json  (+13 more)
