[project]
name = "auto-bi"
version = "0.1.0"
description = "Agent: text / field layout -> dashboard in selected BI on top of DWH DM layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "httpx>=0.27",
    "sqlglot>=30.12.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "clickhouse-connect>=1.4.0",
    "fastapi>=0.138.2",
    "uvicorn>=0.49.0",
    "psycopg[binary]>=3.3.4",
]

[project.optional-dependencies]
# Direct Anthropic Messages API provider (AUTO_BI_LLM_PROVIDER=anthropic). Optional so the
# lean core stays GraceKelly-only by default: `uv sync --extra anthropic` / `pip install '.[anthropic]'`.
anthropic = ["anthropic>=0.113.0"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "black>=24.4",
    "pre-commit>=3.7",
]

[project.scripts]
auto_bi = "auto_bi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_bi"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".tmp"]  # scratch scripts, not part of the codebase

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# Russian text in prompts/fixtures is by design, not a homoglyph typo
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running ClickHouse/Superset stand (docker, runs on Mac)",
]
addopts = "-m 'not integration'"

# Coverage is measured in CI and locally via:
#   uv run --with pytest-cov pytest --cov=auto_bi --cov-report=term-missing
# duckdb is an ephemeral test-only dep (like pytest-cov) — it runs the transform SQL's
# numeric check (tests/test_sqlgen_transforms.py) under PostgreSQL window semantics:
#   uv run --with duckdb pytest tests/test_sqlgen_transforms.py
# Without it those tests `importorskip` and skip; CI passes `--with duckdb` so they run.
[tool.coverage.run]
source = ["auto_bi"]
omit = ["*/__init__.py"]

# mypy is run on auto_bi (not tests, whose fixtures use loose typing by design). Run via:
#   uv run --with mypy --with types-PyYAML mypy auto_bi
# types-PyYAML is pulled in ephemerally to keep uv.lock lean, mirroring pytest-cov in CI.
[tool.mypy]
python_version = "3.12"
files = ["auto_bi"]

[[tool.mypy.overrides]]
# anthropic is an optional extra (installed only with `.[anthropic]`); clickhouse_connect
# ships no py.typed marker. Neither has type info, but neither should block checking our code.
module = ["anthropic", "clickhouse_connect", "clickhouse_connect.*"]
ignore_missing_imports = true
