[project]
name = "autobi-agent"
version = "0.4.0"
description = "Agent: text / field layout -> dashboard in selected BI on top of DWH DM layer"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Julia Edomskikh" }]
keywords = ["bi", "dashboard", "superset", "datalens", "clickhouse", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Database :: Front-Ends",
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "httpx>=0.27",
    "sqlglot>=30.12.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "clickhouse-connect>=1.4.2",
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2",
    "psycopg[binary]>=3.3.4",
    "anthropic>=0.116.0",
]

[project.optional-dependencies]
# No-op alias: anthropic is a core dependency (audit P1-3). Kept so older install
# lines (`pip install 'autobi-agent[anthropic]'` / `uv sync --extra anthropic`) still work.
anthropic = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "black>=24.4",
    "pre-commit>=3.7",
]

[project.urls]
Repository = "https://github.com/brownjuly2003-code/Auto_BI"
Changelog = "https://github.com/brownjuly2003-code/Auto_BI/blob/main/CHANGELOG.md"
Documentation = "https://github.com/brownjuly2003-code/Auto_BI/blob/main/docs/USER_GUIDE.md"

[project.scripts]
auto_bi = "auto_bi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_bi"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".tmp"]  # scratch scripts, not part of the codebase

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# Russian text in prompts/fixtures is by design, not a homoglyph typo
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running ClickHouse/Superset stand (docker, runs on Mac)",
    "e2e: browser E2E (Playwright + axe) against `auto_bi serve` and the live stand",
]
addopts = "-m 'not integration and not e2e'"
# D-4: warnings are errors; every allowlisted entry must name a concrete third-party
# warning we cannot fix ourselves (never a blanket ignore of our own code).
filterwarnings = [
    "error",
    # fastapi's own `from starlette.testclient import ...` — upstream migration to
    # httpx2 pending; not triggerable from auto_bi code.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

# Coverage is measured in CI and locally via:
#   uv run --with pytest-cov pytest --cov=auto_bi --cov-report=term-missing
# duckdb is an ephemeral test-only dep (like pytest-cov) — it runs the transform SQL's
# numeric check (tests/test_sqlgen_transforms.py) under PostgreSQL window semantics:
#   uv run --with duckdb pytest tests/test_sqlgen_transforms.py
# Without it those tests `importorskip` and skip; CI passes `--with duckdb` so they run.
[tool.coverage.run]
source = ["auto_bi"]
omit = ["*/__init__.py"]

# mypy is run on auto_bi (not tests, whose fixtures use loose typing by design). Run via:
#   uv run --with mypy --with types-PyYAML mypy auto_bi
# types-PyYAML is pulled in ephemerally to keep uv.lock lean, mirroring pytest-cov in CI.
[tool.mypy]
python_version = "3.12"
files = ["auto_bi"]

[[tool.mypy.overrides]]
# anthropic / clickhouse_connect ship no usable py.typed stubs for our mypy gate.
module = ["anthropic", "clickhouse_connect", "clickhouse_connect.*"]
ignore_missing_imports = true
